# ITS

./: CMakeLists.txt  README.md
src/: main.cpp
src/CarDectorService/: CarDectorService.cpp  CarDectorService.h
src/CarDectorService/TrtDetector/: TrtDetector.cpp  TrtDetector.h
src/CarDectorService/TrtDetector/common/: logger.cpp  logger.h
src/ControlService/: ControlService.cpp  ControlService.h
src/DrawService/: DrawService.cpp  DrawService.h
src/PlateRecogService/: PlateRecogService.cpp  PlateRecogService.h
src/PlateRecogService/PlateRecognition/: plate_detector.cpp  plate_detector.h
src/PlateSegmente/: PlateSegmente.cpp  PlateSegmente.h
src/TrackingService/: TrackingService.cpp  TrackingService.h
src/TrackingService/TrtTracking/: sort.cpp
src/ViolationDetectionService/: ViolationDetectionService.cpp  ViolationDetectionService.h
src/app/: ItsApp.cpp  ItsApp.h
src/common/: tool.h  type.h
src/common/utility/: Application.h  Service.h
src/http_service/: http_client.cpp  http_client.h  http_service.cpp  http_service.h  mongoose.c  mongoose.h
src/streamserver/: StreamServer.cpp  StreamServer.h
src/streamserver/RtspServer/: RtspServerTool.cpp  RtspServerTool.h
src/streamserver/encode/: encode.cpp  encode.h
